Modify appname/httpport, Add httpaddr

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -1,5 +1,13 @@
-appname = backend
-httpport = 8080
+appname = Auto3Mad
+
+### httpaddr 配置为 127.0.0.1 时，就限定了只能从本机访问，防止被局域网盗取数据
+### 当不配置时，是默认监听的 0.0.0.0 ，就是只要知道我的内网 IP 就可以访问了
+### 验证方式，就是拿本机的内网 IP 来试下
+httpaddr = "127.0.0.1"
+
+# The day of this project created.
+httpport = 1127
+
 runmode = dev
 autorender = false
 copyrequestbody = true
