--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -13,4 +13,8 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 
+EnableAdmin = true
+AdminAddr = "127.0.0.1"
+AdminPort = 1128
+
 include "3mad.conf"
