调试完，关闭 Admin，减少输出信息

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -13,7 +13,7 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 
-EnableAdmin = true
+EnableAdmin = false
 AdminAddr = "127.0.0.1"
 AdminPort = 1128
 
