--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
+    "@ant-design/charts": "1.3.6",
     "@ant-design/pro-descriptions": "^1.9.0",
     "@ant-design/pro-form": "^1.43.0",
     "@ant-design/pro-layout": "^6.26.0",
