SQLCONN 和 HTTPADDR 可由环境变量设置；分开发布版和测试版 Docker 构建和启动

--- a/DockerfileTest
+++ b/DockerfileTest
@@ -45,7 +45,9 @@ COPY --from=go_builder $from_path/backend/backend $run_path/backend
 
 RUN rm -f /etc/localtime \
   && ln -sv /usr/share/zoneinfo/Asia/Chongqing /etc/localtime \
-  && echo "Asia/Chongqing" > /etc/timezone
+  && echo "Asia/Chongqing" > /etc/timezone \
+  && apt-get update \
+  && apt-get install -y curl
 
 WORKDIR $run_path
 
