--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -3,7 +3,8 @@ appname = "Auto3Mad"
 ### httpaddr 配置为 127.0.0.1 时，就限定了只能从本机访问，防止被局域网盗取数据
 ### 当不配置时，是默认监听的 0.0.0.0 ，就是只要知道我的内网 IP 就可以访问了
 ### 验证方式，就是拿本机的内网 IP 来试下
-httpaddr = "127.0.0.1"
+# HTTPADDR 环境变量是为了 Docker 桥接模式得 0.0.0.0 才能被访问
+httpaddr = "${HTTPADDR||127.0.0.1}"
 
 # The day of this project created.
 httpport = 1127
@@ -17,4 +18,4 @@ EnableAdmin = false
 AdminAddr = "127.0.0.1"
 AdminPort = 1128
 
-include "3mad.conf"
+sqlconn = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8}"
