docker 文件布局和 bee run 时一致，调试不需要切来切去

--- a/DockerfileTest
+++ b/DockerfileTest
@@ -37,11 +37,10 @@ COPY source_list_for_buster /etc/apt/sources.list
 ARG from_path=/go/src/github.com/yangsf5/auto3mad
 ARG run_path=/home/auto3mad
 
-
-COPY --from=node_builder $from_path/frontend/dist $run_path/static
-
-COPY --from=go_builder $from_path/backend/conf $run_path/conf
-COPY --from=go_builder $from_path/backend/backend $run_path/backend
+# 路径与 bee run 保持一致，方便切换调试方式
+COPY --from=node_builder $from_path/frontend/dist $run_path/frontend/dist
+COPY --from=go_builder $from_path/backend/conf $run_path/backend/conf
+COPY --from=go_builder $from_path/backend/backend $run_path/backend/backend
 
 RUN rm -f /etc/localtime \
   && ln -sv /usr/share/zoneinfo/Asia/Chongqing /etc/localtime \
@@ -49,9 +48,9 @@ RUN rm -f /etc/localtime \
   && apt-get update \
   && apt-get install -y curl
 
-WORKDIR $run_path
+WORKDIR $run_path/backend
 
-ENTRYPOINT ["/home/auto3mad/backend"]
+ENTRYPOINT ["/home/auto3mad/backend/backend"]
 
 EXPOSE 1127
 
