--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ant-design-pro",
-  "version": "5.0.0",
+  "name": "auto3mad",
+  "version": "0.3.8",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "Auto 3Mad",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
@@ -47,8 +47,8 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@ant-design/charts": "^1.3.6",
     "@ant-design/icons": "^4.5.0",
-    "@ant-design/charts": "1.3.6",
     "@ant-design/pro-descriptions": "^1.9.0",
     "@ant-design/pro-form": "^1.43.0",
     "@ant-design/pro-layout": "^6.26.0",
