mfsu 清理不了 cache，换个文件夹；交叉编译和打包脚本

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,7 @@
 # vendor/
 backend/backend
 backend/lastupdate.tmp
-backend/conf/3mad.conf
+pack
+frontend/.mfsu-dev
+frontend/.mfsu-prod
+auto3mad.tar.gz
