统一 SQL 文件格式：SQL 关键字全大写

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -18,4 +18,4 @@ EnableAdmin = false
 AdminAddr = "127.0.0.1"
 AdminPort = 1128
 
-sqlconn = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8}"
+sqlconn = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8mb4}"
