增加 session 验证；session 表和 user 表

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -9,7 +9,7 @@ httpaddr = "${HTTPADDR||127.0.0.1}"
 # The day of this project created.
 httpport = 1127
 
-runmode = "dev"
+runmode = "${RUNMODE||dev}"
 autorender = false
 copyrequestbody = true
 EnableDocs = true
@@ -19,3 +19,10 @@ AdminAddr = "127.0.0.1"
 AdminPort = 1128
 
 sqlconn = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8mb4}"
+
+
+sessionon = true
+sessiongcmaxlifetime = 604800
+sessionname = auto3madsessionID
+sessionprovider = mysql
+sessionproviderconfig = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8mb4}"
