UserBaseModel 多用户基类；Memorial 升级为 UserBaseModel

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -19,6 +19,7 @@ AdminAddr = "127.0.0.1"
 AdminPort = 1128
 
 sqlconn = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8mb4}"
+OrmDebug = false
 
 
 sessionon = true
