GitHub 登录的服务端逻辑

--- a/backend/conf/app.conf
+++ b/backend/conf/app.conf
@@ -27,3 +27,8 @@ sessiongcmaxlifetime = 604800
 sessionname = auto3madsessionID
 sessionprovider = mysql
 sessionproviderconfig = "${SQLCONN||root:@tcp(127.0.0.1:3306)/auto3mad?charset=utf8mb4}"
+
+FrontEndURL = "${FRONTENDURL||http://127.0.0.1:11270/#/}"
+
+GitHubClientID = "${GitHubClientID}"
+GitHubClientSecret = "${GitHubClientSecret}"
